--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "umd:main": "dist/index.umd.js",
   "module": "dist/index.m.js",
-  "source": "src/index.js", 
+  "source": "src/index.js",
   "author": "1ven",
   "license": "ISC",
   "scripts": {
@@ -14,5 +14,8 @@
   },
   "peerDependencies": {
     "react": "^16.4.0"
+  },
+  "devDependencies": {
+    "microbundle": "^0.4.4"
   }
 }
