--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "author": "1ven",
   "license": "ISC",
   "scripts": {
-    "build": "microbundle",
-    "dev": "microbundle watch"
+    "build": "microbundle --jsx React.createElement"
   },
   "peerDependencies": {
     "react": "^16.4.0"
